# almanac

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  README.md  almanac-config.json  config.json  config.toml  crate-hashes.json  default.nix  flake.nix  foundry.toml  shell.nix  test-service.toml
.cargo/: config.toml
config/: README.md  dev.toml  prod.toml  test.toml  test_config.toml
contracts/: Faucet.sol  TestToken.sol  UniversalGateway.sol
crates/api/: Cargo.toml
crates/api/src/: auth.rs  cli.rs  graphql.rs  http.rs  lib.rs  subscription.rs  websocket.rs
crates/api/tests/: graphql_tests.rs  http_tests.rs  websocket_tests.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: concurrency.rs  lib.rs  load.rs  load_test_only.rs  mod.rs  postgres_opt.rs  postgres_pool.rs  profile.rs  report.rs  rocksdb_opt.rs  suite.rs
crates/causality/: Cargo.toml  README.md
crates/causality/src/: causality.rs  error.rs  indexer.rs  lib.rs  smt.rs  storage.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: aggregation.rs  archival.rs  backup_restore.rs  caching.rs  compression.rs  config.rs  correlation.rs  cross_chain.rs  data_export.rs  error.rs  event.rs  indexing.rs  lib.rs  migrations.rs  pipeline.rs  pool.rs  proto.rs  reorg.rs  reorg_handler.rs  security.rs  service.rs  sync_tracker.rs  text_search.rs  types.rs  validation.rs
crates/core/src/config/: tests.rs
crates/cosmos/: Cargo.toml
crates/cosmos/src/: contracts.rs  event.rs  lib.rs  provider.rs  subscription.rs
crates/cosmos/src/codegen/: cli.rs  generator.rs  mod.rs  parser.rs
crates/cosmos/src/codegen/templates/: api_graphql.hbs  api_rest.hbs  client_execute.hbs  client_mod.hbs  client_query.hbs  client_types.hbs  migration.hbs  mod.rs  storage_postgres.hbs  storage_rocksdb.hbs  storage_traits.hbs
crates/cosmos/src/codegen/tests/: integration.rs  mod.rs
crates/cosmos/tests/: valence_account_tests.rs  valence_authorization_tests.rs  valence_library_tests.rs  valence_processor_tests.rs
crates/ethereum/: Cargo.toml
crates/ethereum/src/: event.rs  lib.rs  provider.rs  reorg.rs  subscription.rs
crates/ethereum/src/codegen/: cli.rs  generator.rs  mod.rs  parser.rs
crates/ethereum/src/codegen/templates/: api_rest.hbs  client_mod.hbs  client_transaction.hbs  client_types.hbs  client_view.hbs  mod.rs  storage_postgres.hbs
crates/ethereum/src/codegen/tests/: integration.rs  mod.rs
crates/ethereum/src/tests/: finality_tests.rs  mod.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: aggregation.rs  historical.rs  lib.rs  performance.rs
crates/storage/: Cargo.toml  README.md
crates/storage/.sqlx/: query-0d5ea6688e0e95e3bd79f63a737cb3c14697c6bb760ae1caf4f08a77f8e90844.json  query-16abac127985d1e578414cf3128f0705092f4b3881929bd2ed5b0ac12e16b6f1.json  query-1ca1ebd650cb6deb98c4eddd43e5a6006490b5eb15d610ea119edc99a15b47ad.json  query-1ead561df80ce1e37ab43ace0f2ae950c96682a104cfd372a4a3524bb17a4bd5.json  query-2fa8da5d8de6c3544a976f03238b4cab5ca80e3221a5a0540adc18787063800b.json  query-40621037c906ac1ccae3a01a3ac84b5c5d2bc551f7f157659fd8f1564990fbe9.json  query-4482871c7e08aa189414d36055cc090353ba87c1b01e9a9b32ce92fc24e45a28.json  query-47fb517e3d22d3e320ffac58cd979f8a3657441a2a30b8d3ffb5f1c988b4c416.json  query-52562277419fbc11074747b669d745e844310ae92f1242a72cc61af2419894cf.json  query-58f92d9cb6da3d31da74d4abd67bf551ea4a7b6ce1e54a1ce802d99a77579648.json  query-5a989da93afa67d437c38ecfc07a82ab6d8f302042be34ccbcdc4cec62cdb2dd.json  query-5fe8be9a71e531f06bf46c14e11742488eb0e9a7f91019062264662804d707f4.json  query-8db678c2a0c9f88057d12ed1c7a552e9d89288806153b8d800fe41eff6502333.json  query-b7fe08a4d90e6f83d8d21c7eb746c3dbd461b70f319edcdf6c0f924f6045fa5b.json  query-c4dd6cd3f5b3692fbf64c9f45df88e1cea3e86d9d57848e2857ca964b9e7d87e.json  query-c7139e510fc02348da62c7b8d4d8cc33308d115e03b2087c00f7d545ba61db83.json
crates/storage/examples/: basic_storage_test.rs
crates/storage/migrations/: 00_init_schema.sql.json  20230101000000_initial_schema.sql  202404070201_create_events_table.sql  202404070201_create_events_table.sql.json  202404070202_create_blocks_table.sql.json  202404070203_create_contract_schemas_table.sql  202404070203_create_contract_schemas_table.sql.json  202404070204_valence_accounts.sql.json  202404070205_valence_processors.sql  202404070205_valence_processors.sql.json  202404070206_valence_authorization.sql  202404070206_valence_authorization.sql.json  202404070207_valence_libraries.sql.json  20240517000000_add_block_status_columns.sql  20240517000000_add_finalized_to_blocks.sql
crates/storage/src/: lib.rs  lib.rs.backup  lib.rs.bak1  lib.rs.bak2  memory.rs  postgres.rs  rocks.rs  rocks.rs.backup  rocks.rs.bak  sync.rs  tests.rs
crates/storage/src/migrations/: 00_init_schema.sql  202404070202_create_blocks_table.sql  202404070204_valence_accounts.sql  202404070207_valence_libraries.sql  mod.rs  postgres.rs  schema.rs
crates/storage/src/postgres/: migrations.rs  mod.rs  mod.rs.backup  mod.rs.bak
crates/storage/src/postgres/repositories/: contract_schema_repository.rs  event_repository.rs  mod.rs
crates/storage/src/tests/: common.rs  mod.rs  postgres_benchmark.rs  rocks_benchmark.rs  sync_benchmark.rs
crates/storage/tests/: migrations.rs  pure_rocks_only.rs  rocks_basic.rs  rocks_only.rs  storage_sync.rs  sync_test.rs
crates/tools/: Cargo.toml
crates/tools/src/: config.rs  lib.rs  reth_client.rs  service.rs
deployments/: faucet.json
docs/: adr_000_sqlx_prepare.md  almanac_api.md  almanac_crate_api.md  almanac_service_api.md  arch_000_node_env.md  arch_001_indexer.md  (+15 more)
e2e/: Cargo.toml  README.md
e2e/fixtures/: cosmos_config.toml  ethereum_config.toml
e2e/fixtures/abis/: erc20.json  usdc.json
e2e/fixtures/schemas/: valence_base_account.json
e2e/src/: lib.rs  main.rs
e2e/src/tests/: basic.rs  cli_comprehensive.rs  config.rs  cosmos.rs  ethereum.rs  mod.rs  validation.rs
e2e/src/utils/: fixtures.rs  mod.rs  setup.rs  validation.rs
(+158 files in other folders)
