[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/cosmos",
    "crates/ethereum",
    "crates/storage",
    "crates/pipeline",
]

[package]
name = "almanac"
version = "0.1.0"
edition = "2021"
authors = ["Timewave"]
repository = "https://github.com/timewave-computer/almanac"
license = "MIT OR Apache-2.0"

[dependencies]
indexer-pipeline = { path = "crates/pipeline" }
indexer-core = { path = "crates/core" }
indexer-ethereum = { path = "crates/ethereum" }
indexer-cosmos = { path = "crates/cosmos", features = ["contracts"] }
indexer-storage = { path = "crates/storage" }
indexer-api = { path = "crates/api" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Ethereum interactions
ethers = { workspace = true, features = ["ws", "rustls"] }
eyre = "0.6.8"
serde_json = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Timewave"]
repository = "https://github.com/timewave-computer/almanac"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1.77"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4.3"
bincode = "1.3.3"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0.50"
anyhow = "1.0"

# Ethereum specific
ethers = { version = "2.0", features = ["ws", "rustls"] }
reth = { version = "0.1.0-alpha.6", default-features = false }

# Cosmos specific
cosmrs = { version = "0.14", features = ["rpc"] }

# Storage
rocksdb = "0.21"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }

# API
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
async-graphql = { version = "6.0.10", features = ["chrono"] }
async-graphql-axum = "6.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utility
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
bytes = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "reth_client"
path = "src/tools/reth_client.rs" 