[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/core",
    "crates/storage",
    "crates/pipeline",
    "crates/ethereum",
    "crates/cosmos",
    "crates/api",
    "crates/tools",
    "crates/benchmarks",
    "crates/query",
]



[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Timewave"]
repository = "https://github.com/timewave-computer/almanac"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1.77"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4.3"
bincode = "1.3.3"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0.50"
anyhow = "1.0"

# Storage
rocksdb = "0.21"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }

# API
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
async-graphql = { version = "6.0.10", features = ["chrono"] }
async-graphql-axum = "6.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utility
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
bytes = "1.4"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

 