[package]
name = "almanac-e2e-tests"
version = "0.1.0"
edition = "2021"
description = "End-to-end tests for Almanac CLI commands"

[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
# Test framework
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# CLI interaction
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

# File system and process management
walkdir = "2.4"
regex = "1.10"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"

# JSON/TOML processing
toml = "0.8"

# HTTP client for fetching test data
reqwest = { version = "0.11", features = ["json"] }

# Database testing (optional)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
database-tests = ["sqlx"] 