[package]
name = "indexer-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Web frameworks
axum = { version = "0.7.2", features = ["macros"] }
async-graphql = { version = "6.0.10", features = ["chrono"] }
async-graphql-axum = "6.0.10"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.21.4"

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal crates
indexer-core = { path = "../core" }
indexer-storage = { path = "../storage" } 