[package]
name = "indexer-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "API interface for the indexer"

[dependencies]
# Internal crates
indexer-core = { path = "../core" }
indexer-common = { path = "../common" }

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Web frameworks
axum = "0.7.9"
tower = "0.4.13"
tower-http = "0.4.4"

# GraphQL
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Base64 encoding for binary data
base64 = "0.21.7"

# Logging and error handling
tracing.workspace = true
thiserror.workspace = true

[features]
default = []
postgres = ["indexer-core/postgres"]
rocks = ["indexer-core/rocks"] 