[package]
name = "indexer-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "API interface for the indexer"

[dependencies]
# Internal crates
indexer-core = { path = "../core" }
indexer-pipeline = { path = "../pipeline" }
indexer-storage = { path = "../storage", features = ["postgres", "rocks"] }
indexer-ethereum = { path = "../ethereum" }
indexer-cosmos = { path = "../cosmos" }

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Web frameworks
axum = { version = "0.6.20", features = ["ws", "headers"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }

# GraphQL
async-graphql = { version = "6.0.11", features = ["chrono"] }
async-graphql-axum = "6.0.11"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Base64 encoding for binary data
base64.workspace = true

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Authentication and security
jsonwebtoken = "8.3"
bcrypt = "0.15"

# CLI
clap.workspace = true

# Testing
axum-test-helper = { version = "0.3.0", optional = true }

[features]
default = ["postgres", "rocks"]
postgres = ["indexer-core/postgres"]
rocks = ["indexer-core/rocks"]
test-utils = ["axum-test-helper"] 