[package]
name = "indexer-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Common types for the indexer"

[dependencies]
# Async runtime
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging and error handling
tracing.workspace = true
thiserror.workspace = true

# Database
sqlx = { workspace = true, optional = true }
rocksdb = { workspace = true, optional = true }

[features]
default = []
# Enable support for PostgreSQL storage
postgres = ["sqlx"]
# Enable support for RocksDB storage
rocks = ["rocksdb"] 