[package]
name = "indexer-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Common types and utilities for Almanac indexers"

[dependencies]
# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"], optional = true }
rocksdb = { version = "0.21", optional = true }

[features]
default = []
# Enable support for PostgreSQL storage
postgres = ["sqlx"]
# Enable support for RocksDB storage
rocks = ["rocksdb"] 