[package]
name = "indexer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core types and traits for the indexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true

# Text search
regex = "1.10"

# Logging and error handling
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Database
sqlx = { workspace = true, optional = true, features = ["migrate"] }
rocksdb = { workspace = true, optional = true }

# Internal crates
indexer-pipeline = { path = "../pipeline" }

# Internal dependencies
indexer-common = { path = "../common" }

# Valence domain clients for proto integration
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "766a1b593bcea9ed67b45c8c1ea9c548d0692a71" }

[features]
default = []
# Enable support for PostgreSQL storage
postgres = ["sqlx"]
# Enable support for RocksDB storage
rocks = ["rocksdb"] 