[package]
name = "indexer-cosmos"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Cosmos client using valence-domain-clients Cosmos integration"

[features]
default = []
# TODO: Features will be replaced with valence-domain-clients feature flags
contracts = []

[dependencies]
# Core indexer dependencies (keep these for interface compatibility)
indexer-core = { path = "../core" }

# Minimal async support
async-trait.workspace = true
tokio = { workspace = true, features = ["rt"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Valence domain clients integration for Cosmos support
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "766a1b593bcea9ed67b45c8c1ea9c548d0692a71" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] } 