[package]
name = "indexer-ethereum"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Indexer core
indexer-core = { path = "../core" }
indexer-pipeline = { path = "../pipeline" }
indexer-storage = { path = "../storage" }

# Async runtime
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

# Ethereum specific
ethers.workspace = true
reth.workspace = true
hex = "0.4.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging and error handling
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
mockall = "0.11.4"
rand = "0.8.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] } 