[package]
name = "indexer-ethereum"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Ethereum client using valence-domain-clients EVM integration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core indexer dependencies (keep these for interface compatibility)
indexer-core = { path = "../core" }
indexer-pipeline = { path = "../pipeline" }

# Minimal async support
async-trait.workspace = true
tokio = { workspace = true, features = ["rt"] }

# Error handling
anyhow.workspace = true

# Valence domain clients integration for EVM support
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "766a1b593bcea9ed67b45c8c1ea9c548d0692a71" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] } 