[package]
name = "indexer-pipeline"
version = "0.1.0"
edition = "2021"
description = "Indexing pipeline and common types for processing blockchain events"

[dependencies]
# Internal dependencies
indexer-common = { path = "../common" }
# Do not depend on core to avoid circular dependencies
# indexer-core = { path = "../core" }
# indexer-storage = { path = "../storage" }
# indexer-ethereum = { path = "../ethereum" }
# indexer-cosmos = { path = "../cosmos" }

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
log = "0.4"
tracing = "0.1"
metrics = "0.21"
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"], optional = true }
rocksdb = { version = "0.21", optional = true }

[features]
default = ["postgres", "rocks"]
# Enable support for PostgreSQL storage
postgres = ["sqlx"]
# Enable support for RocksDB storage
rocks = ["rocksdb"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.5" 