[package]
name = "indexer-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "run_rocks_benchmark"
path = "src/bin/run_rocks_benchmark.rs"

[[bin]]
name = "test_rocks_transactions"
path = "src/bin/test_rocks_transactions.rs"

[[bin]]
name = "test_ethereum_adapter"
path = "src/bin/test_ethereum_adapter.rs"

[[bin]]
name = "test_cosmos_adapter"
path = "src/bin/test_cosmos_adapter.rs"

[[bin]]
name = "test_chain_reorg"
path = "src/bin/test_chain_reorg.rs"

[dependencies]
# Workspace dependencies
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "macros", "uuid", "time", "chrono"], optional = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
num_cpus.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
rocksdb = { workspace = true, optional = true }
bincode.workspace = true
tokio.workspace = true
futures.workspace = true
uuid.workspace = true
bytes.workspace = true
base64.workspace = true

# Internal crates
indexer-core = { path = "../core" }
indexer-pipeline = { path = "../pipeline" }
indexer-common = { path = "../common" }

# Explicit versioned dependencies (Only those NOT in workspace)
rand = "0.8.5"
tempfile = "3.9.0"

[dev-dependencies]
# Keep these explicit as they are dev-only
tempfile = "3.9.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["async_tokio"] }
proptest = "1.4.0"
testcontainers = "0.22.0"
dockertest = "0.5.0"

[features]
default = ["postgres", "rocks"]
rocks = ["indexer-common/rocks", "rocksdb"]
postgres = ["indexer-common/postgres", "sqlx"]
offline = [] # Feature for enabling SQLx offline mode
